Styled news, download, about and FAQ page.

--- a/STUDYspace website/about.html
+++ b/STUDYspace website/about.html
@@ -23,10 +23,10 @@
       </ul>
     </nav>
   </header>
-    <h2><span class = "outspan"><span class ="inspan">About</span></span> Us</h2>
 
     <section class = "textblock">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae neque ex rem nihil earum veritatis atque saepe ab, voluptatem delectus. Maxime, ipsum! Architecto, officiis ducimus omnis quibusdam nulla corporis eligendi, sint rerum neque alias, veniam velit, non amet facilis optio dolorem aliquid fuga. Magni temporibus labore suscipit sequi dignissimos incidunt, neque cumque. Fugiat distinctio earum, hic libero voluptatem magnam voluptates quae enim dolores alias illum soluta, voluptate rerum omnis. Totam voluptate vero quibusdam et dolorem officiis laboriosam officia quod rerum quaerat ratione natus dicta expedita quasi quas ullam, corporis temporibus eveniet illum beatae dolor, numquam laudantium quam minima! Expedita, quasi!</p>
+      <h2>About Us</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus sint reprehenderit voluptatum dolorem, amet perspiciatis ipsa consectetur voluptatibus id et corrupti hic natus maiores eos. A dolorum iste, nihil eius quis officia neque laborum veniam corporis aliquam, repellendus atque animi hic dolor maxime quas expedita ipsam totam dolore. Cupiditate aut rerum, optio assumenda ipsam vel ipsa sit excepturi, ex hic, quasi facilis magnam nostrum repudiandae qui labore quod a et illum eum sequi animi asperiores voluptate. Hic numquam amet, aliquam quos dolor, vero sapiente nesciunt voluptatem optio illum itaque deserunt minus eligendi eveniet, perspiciatis sed consectetur ad non dignissimos! Sit mollitia sed quibusdam inventore eligendi laboriosam excepturi quae error consequuntur, quidem veniam iusto sapiente sunt accusamus, asperiores iste? Ab eum, provident, eaque possimus maxime cupiditate voluptatum! Nesciunt aliquid libero voluptate voluptas at, soluta quidem corporis eius modi eos facilis velit earum odit saepe doloribus dolores? Consectetur, pariatur, dolorum. Nihil, ipsam, quod. Dicta porro et pariatur unde adipisci quidem natus, quos, a amet laboriosam quis quas atque provident fuga, cupiditate placeat ipsam rerum. Reprehenderit totam ex quo nobis, consequatur velit veniam voluptas, ipsam eligendi voluptatem culpa omnis quae est ab cupiditate! Velit obcaecati inventore dolore consequatur vitae saepe totam ad ratione!</p>
     </section>
 
     <footer>
