--- a/STUDYspace website/download.html
+++ b/STUDYspace website/download.html
@@ -24,73 +24,79 @@
     </nav>
   </header>
 
-  <h2>Downloading <span class = "outspan"><span class ="inspan">STUDY</span>space</span></h2>
+  <section class = "textblock">
+    <h2>Downloading STUDYspace</h2>
 
-  <p>As of now, STUDYspace is still in development. This means you cannot download the extension or app at this time, but
-  here is how we imagine the downloading process will look like + additional steps to setting up STUDYspace.</p>
+    <p>As of now, <span class = "outspan"><span class = "inspan">STUDY</span>space</span> is still in development. This means you cannot download the extension or app at this time, but
+    here is how we imagine the downloading process will look like + additional steps to setting up STUDYspace.</p>
+  </section>
 
-  <section class = "other">
-    <h3><span class = "inspan">Chrome Browser Extension</span></h3>
-    <div class = "boxes">
-      <div class = "box">
+
+  <section class = "textblock">
+    <h3>Chrome Browser Extension</h3>
+    <div class = "boxes" id = "chrome">
+      <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step one:</span> Downloading the extension.</span></h4>
-
+        <img src="" alt="Download our extension by clicking the 'Browser Extension' option.">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
       </div>
 
-      <div class = "box">
+      <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step two:</span> Setting up the extension.</span></h4>
-
+        <img src="" alt="Enable the extension on Google Chrome Extensions.">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
       </div>
     </div>
   </section>
 
-  <section class = "other">
-    <h3><span class = "inspan">App</span></h3>
-    <div class = "boxes">
-      <div class = "box">
+  <section class = "textblock">
+    <h3>App</h3>
+    <div class = "boxes" id = "app">
+      <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step one:</span> Downloading our app.</span></h4>
-
+        <img src="" alt="Download our extension by clicking the 'App' option.">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
       </div>
 
-      <div class = "box">
+      <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step two:</span> Choosing an account or guest.</span></h4>
-
+        <img src="" alt="Open the app and choose either 'account' or 'guest'.">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
       </div>
 
-      <div class = "box">
+      <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step three I:</span> Setting up your STUDYspace account.</span></h4>
-
+        <img src="" alt="Check your email address for a code if you chose the account option.">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
       </div>
 
-      <div class = "box">
+      <div class = "newsbox">
         <h4><span class = "outspan"><span class = "inspan"> Step three II:</span> Continuing your STUDYspace setup as a guest.</span></h4>
-
+        <img src="" alt="Proceed onwards to choosing the mode you want to use!">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fugit repellendus aliquid asperiores illum dolores vitae quos mollitia ut sint!</p>
       </div>
     </div>
   </section>
 
-  <section class = "other">
-    <h3><span class = "inspan">Choosing your work mode</span></h3>
+  <section class = "textblock">
+    <h3>Choosing your work mode</h3>
 
-    <div class = "other">
-      <div class = "box">
+    <div class = "boxes">
+      <div class = "newsbox">
           <h4><span class = "outspan"><span class = "inspan">Manual mode</span></span></h4>
+          <img src="" alt="Manually enable and disable website block.">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quisquam, vel. Perferendis, velit expedita praesentium nostrum sit mollitia, sed quibusdam!</p>
       </div>
 
-      <div class = "box">
+      <div class = "newsbox">
           <h4><span class = "outspan"><span class = "inspan">Pomodoro mode</span></span></h4>
+          <img src="" alt="Choose a time of up to 25 minutes and block the websites of your choice!">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quisquam, vel. Perferendis, velit expedita praesentium nostrum sit mollitia, sed quibusdam!</p>
       </div>
 
-      <div class = "box">
+      <div class = "newsbox">
           <h4><span class = "outspan"><span class = "inspan">Exam mode</span></span></h4>
+          <img src="" alt="Choose a time of up to 3 hours to block all urls.">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, quisquam, vel. Perferendis, velit expedita praesentium nostrum sit mollitia, sed quibusdam!</p>
       </div>
     </div>
