--- a/STUDYspace website/faq.html
+++ b/STUDYspace website/faq.html
@@ -22,78 +22,83 @@
         <li><a href="faq.html"><i class="fas fa-solid fa-circle-question"></i>FAQ</a></li>
       </ul>
     </nav>
-  </header>  <h2><span class = "outspan"><span class ="inspan">FAQ</span></span></h2>
-  <p>Welcome to our <span class = "inspan">Frequently Asked Questions</span> page! Here you can find the who, what,
-    when, how and why regarding <span class = "outspan"><span class = "inspan">STUDY</span>space</span>. If you are unable to find the answers you area
-  looking for, please email us <span class = "outspan"><span class = "inspan">here</span></span> and we will be sure to get back to you ASAP!</p>
+  </header>
+  <section class = "textblock">
+    <h2>FAQ</h2>
+    <p>Welcome to our <span class = "inspan">Frequently Asked Questions</span> page! Here you can find the who, what,
+      when, how and why regarding <span class = "outspan"><span class = "inspan">STUDY</span>space</span>. If you are unable to find the answers you area
+    looking for, please email us <span class = "outspan"><span class = "inspan">here</span></span> and we will be sure to get back to you ASAP!</p>
+  </section>
 
-  <section class = "Q&A">
+  <section class = "qa">
     <div class = "question">
       <h4>What is <span class = "outspan"><span class = "inspan">STUDY</span>space</span>?</h4>
-      <i class="fa-solid fa-angle-down"></i>
+      <i class="faq fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>Why should I use <span class = "outspan"><span class = "inspan">STUDY</span>space</span>?</h4>
-      <i class="fa-solid fa-angle-down"></i>
+      <i class="faq fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>How does <span class = "outspan"><span class = "inspan">STUDY</span>space</span> differ from other productivity browser extensions or apps?</h4>
-      <i class="fa-solid fa-angle-down"></i>
+      <i class="faq fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>Can I download <span class = "outspan"><span class = "inspan">STUDY</span>space</span>?</h4>
-      <i class="fa-solid fa-angle-down"></i>
+      <i class="faq fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>Is <span class = "outspan"><span class = "inspan">STUDY</span>space</span> free?</h4>
-      <i class="fa-solid fa-angle-down"></i>
+      <i class="faq fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>Who is <span class = "outspan"><span class = "inspan">STUDY</span>space</span> aimed at?</h4>
-      <i class="fa-solid fa-angle-down"></i>
+      <i class="faq fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>When will <span class = "outspan"><span class = "inspan">STUDY</span>space</span> be available?</h4>
+      <i class="faq fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>What if a website I want blocked on <span class = "outspan"><span class = "inspan">STUDY</span>space</span> is not an option?</h4>
-      <i class="fa-solid fa-angle-down"></i>
+      <i class="faq fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>Can I make mode or website suggestions for <span class = "outspan"><span class = "inspan">STUDY</span>space</span>?</h4>
-      <i class="fa-solid fa-angle-down"></i>
+      <i class="faq fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>How do I set up a <span class = "outspan"><span class = "inspan">STUDY</span>space</span> account?</h4>
-      <i class="fa-solid fa-angle-down"></i>
+      <i class="faq fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>Can I switch from using <span class = "outspan"><span class = "inspan">STUDY</span>space</span> as a guest to creating an account?</h4>
+      <i class="faq fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>Why do I need to save my <span class = "outspan"><span class = "inspan">STUDY</span>space</span> verification code?</h4>
-      <i class="fa-solid fa-angle-down"></i>
+      <i class="faq fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>What is the difference between the <span class = "outspan"><span class = "inspan">STUDY</span>space</span> app and the browser extension?</h4>
-      <i class="fa-solid fa-angle-down"></i>
+      <i class="faq fa-solid fa-angle-down"></i>
     </div>
 
     <div class = "question">
       <h4>Will <span class = "outspan"><span class = "inspan">STUDY</span>space</span> be available on Mobile?</h4>
-      <i class="fa-solid fa-angle-down"></i>
+      <i class="faq fa-solid fa-angle-down"></i>
     </div>
   </section>
 
