--- a/STUDYspace website/news.html
+++ b/STUDYspace website/news.html
@@ -23,19 +23,27 @@
       </ul>
     </nav>
   </header>
-  <h2><span class = "outspan"><span class ="inspan">STUDY</span>space</span> Newsboard</h2>
-  <p>Welcome to the <span class = "outspan"><span class = "inspan">STUDY</span>space</span> newsboard! Here you can read up on all the latest information
-  regarding the development of STUDYspace's Browser Extension & App.</p>
+  <section class = "textblock">
+    <h2>STUDYspaceNewsboard</h2>
+    <p>Welcome to the <span class = "outspan"><span class = "inspan">STUDY</span>space</span> newsboard! Here you can read up on all the latest information
+    regarding the development of STUDYspace's Browser Extension & App.</p>
 
-  <section class = "other">
     <div class = "boxes">
-      <div class = "box">
-        <h4><span class = "inspan">11/07/2022:</span> STUDYspace Browser Extension first look.</h4>
+      <div class = "newsbox">
+        <a href="#"><span class = "inspan">31/08/2022:</span></a>
+        <h4>Logo + Mascot competition!</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptatem natus nam temporibus neque at.</p>
       </div>
 
-      <div class = "box">
-        <h4><span class = "inspan">18/05/2022:</span>Welcome to our blog!</h4>
+      <div class = "newsbox">
+        <a href="#"><span class = "inspan">11/07/2022:</span></a>
+        <h4>STUDYspace Browser Extension first look.</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptatem natus nam temporibus neque at.</p>
+      </div>
+
+      <div class = "newsbox">
+        <a href="#"><span class = "inspan">18/05/2022:</span></a>
+        <h4>Welcome to our blog!</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptatem natus nam temporibus neque at.</p>
       </div>
     </div>
