Added x4 new pages + Other minor changes: - x3 is a blog page - x1 is a contact/help page. - Renamed the title for all pages. - Styled all CSS pages.

--- a/STUDYspace website/about.html
+++ b/STUDYspace website/about.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
   <script src="https://kit.fontawesome.com/33a06fc26a.js" crossorigin="anonymous"></script>
-  <title>Home - STUDYspace</title>
+  <title>About STUDYspace</title>
 </head>
 <body>
   <header>
@@ -20,6 +20,7 @@
         <li><a href="news.html"><i class="fas fa-solid fa-newspaper"></i>News</a></li>
         <li><a href="download.html"><i class="fas fa-solid fa-download"></i>Download</a></li>
         <li><a href="faq.html"><i class="fas fa-solid fa-circle-question"></i>FAQ</a></li>
+        <li><a href="help.html"><i class="fas fa-solid fa-address-card"></i>Contact</a></li>
       </ul>
     </nav>
   </header>
