--- a/STUDYspace website/blog1.html
+++ b/STUDYspace website/blog1.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
   <script src="https://kit.fontawesome.com/33a06fc26a.js" crossorigin="anonymous"></script>
-  <title>STUDYspace Home</title>
+  <title>18/05/2022 Blog post</title>
 </head>
 <body>
   <header>
@@ -25,61 +25,12 @@
     </nav>
   </header>
 
-  <section class = "landing" id = "top">
-    <h2>Welcome to STUDYspace!</h2>
-  </section>
 
   <section class = "textblock">
-    <h3>What is STUDYspace?</h3>
-    <p><span class = "outspan"><span class = "inspan">STUDY</span>space</span> is a procrastination-prevention/productivity program which attempts to help students struggling
-      to stay on track and tackle procrastination. Whether you decide to use our app or Google Chrome Extension,
-      STUDYspace will allow you to study distraction-free by getting you to select the websites of your choice that
-    pose the biggest threat to your productivity, which we will then block until you choose to disable it or until
-  a time which is also chosen by you runs out. Scroll down to read more about the current modes that we have envisioned
-for STUDYspace once it is released!</p>
+    <h2><span class = "outspan">18 May 2022 </span>- Welcome to our blog!</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia totam eius est non incidunt eum earum quo, rem quidem quos cumque odit facere dolorem! Magnam provident quo repellendus iusto officiis omnis totam rerum vitae aut. Minus amet dolorem iste, id quis velit. Pariatur dolor consectetur voluptate ut, explicabo rerum vero nostrum, totam quae neque enim itaque perspiciatis, consequatur esse quas consequuntur vel corporis error quisquam ad! Tempore rem cum similique eum, magni maiores. Laboriosam aliquid laborum totam quod soluta, sunt error, nihil perferendis sed ipsum aperiam perspiciatis! In ipsum doloribus, quia praesentium ea magni doloremque nemo pariatur eum officiis earum nam porro. Sapiente quia qui ad at. Nesciunt vero suscipit, atque modi sed. Illum, necessitatibus quidem mollitia dignissimos accusantium voluptatibus tenetur, quaerat odit ipsam, numquam est ratione? Exercitationem ut optio dicta, eum, quaerat vitae, sapiente at fugit consectetur perspiciatis voluptates. Voluptate assumenda dolore architecto quos perferendis, quasi modi et nobis.</p>
   </section>
 
-  <section class = "textblock">
-    <div class = "webcheck">
-      <input type="checkbox" id = "check">
-      <label for = "check">Youtube</label>
-    </div>
-    <h3>Manual mode</h3>
-    <p>The main purpose of using STUDYspace is to allow students to identify their
-    biggest distractions in the digital world and take action to prevent these distractions
-  from affecting their studies. Manual mode allows users to manually control how long they
-feel they want to work distraction-free. Unlike the other modes, Manual mode only requires
-one step to setup the website block, which is to simply choose which websites you want blocked.
-Once the block is activated, users can choose when they want it to be disabled.</p>
-  </section>
-
-  <section class = "textblock">
-    <div class = "webcheck" id = "time">
-      <div class = "updown" id = "up">
-        <i class="fan fa-solid fa-angle-up"></i>
-        <i class="fan fa-solid fa-angle-up"></i>
-     </div>
-      <h1>10:00</h1>
-      <div class = "updown" id = "down">
-      <i class="fan fa-solid fa-angle-down"></i>
-      <i class="fan fa-solid fa-angle-down"></i>
-    </div>
-      <button class = "btn">Start</button>
-      <button class = "btn">Pause</button>
-    </div>
-    <h3>Timed modes: Pomodoro & Exam mode</h3>
-    <p><span class = "outspan"><span class = "inspan">Pomodoro mode</span></span> makes use of the Pomodoro technique. The Pomodoro technique is a popular time management tool which is
-      frequently used by people who struggle with distractions or procrastinates
-      easily. In this mode, the user can choose a time of up to 25 minutes along with the length of
-      their rest breaks between study sessions. After the user has chosen a time, they will
-    then move onto choosing the websites they want to be blocked for their chosen time.</p>
-    <br>
-    <br>
-    <p><span class = "outspan"><span class = "inspan">Exam mode</span></span> is our newest STUDYspace mode concept. Similar to Pomodoro mode, Exam mode will require the user to choose a time of their choice. However,
-      Exam mode will simulate real exam time constraints, meaning the user will only be able to choose a time between 45 minutes and 3 hours.
-      Once a time is selected, STUDYspace will block all websites except for Google and it's applications to allow for zero distractions
-    much like in real exams.</p>
-  </section>
 
 
   <footer>
