--- a/STUDYspace website/faq.html
+++ b/STUDYspace website/faq.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
   <script src="https://kit.fontawesome.com/33a06fc26a.js" crossorigin="anonymous"></script>
-  <title>Home - STUDYspace</title>
+  <title>Frequently Asked Questions</title>
 </head>
 <body>
   <header>
@@ -20,14 +20,15 @@
         <li><a href="news.html"><i class="fas fa-solid fa-newspaper"></i>News</a></li>
         <li><a href="download.html"><i class="fas fa-solid fa-download"></i>Download</a></li>
         <li><a href="faq.html"><i class="fas fa-solid fa-circle-question"></i>FAQ</a></li>
+        <li><a href="help.html"><i class="fas fa-solid fa-address-card"></i>Contact</a></li>
       </ul>
     </nav>
   </header>
   <section class = "textblock">
     <h2>FAQ</h2>
-    <p>Welcome to our <span class = "inspan">Frequently Asked Questions</span> page! Here you can find the who, what,
+    <p>Welcome to our <span class = "outspan"><span class = "inspan">Frequently Asked Questions</span></span> page! Here you can find the who, what,
       when, how and why regarding <span class = "outspan"><span class = "inspan">STUDY</span>space</span>. If you are unable to find the answers you area
-    looking for, please email us <span class = "outspan"><span class = "inspan">here</span></span> and we will be sure to get back to you ASAP!</p>
+    looking for, please email us <a href="help.html"><span class = "outspan"><span class = "inspan">here</span></span></a> and we will be sure to get back to you ASAP!</p>
   </section>
 
   <section class = "qa">
