--- a/STUDYspace website/news.html
+++ b/STUDYspace website/news.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
   <script src="https://kit.fontawesome.com/33a06fc26a.js" crossorigin="anonymous"></script>
-  <title>Home - STUDYspace</title>
+  <title>STUDYspace Newsboard</title>
 </head>
 <body>
   <header>
@@ -20,6 +20,7 @@
         <li><a href="news.html"><i class="fas fa-solid fa-newspaper"></i>News</a></li>
         <li><a href="download.html"><i class="fas fa-solid fa-download"></i>Download</a></li>
         <li><a href="faq.html"><i class="fas fa-solid fa-circle-question"></i>FAQ</a></li>
+        <li><a href="help.html"><i class="fas fa-solid fa-address-card"></i>Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -30,19 +31,19 @@
 
     <div class = "boxes">
       <div class = "newsbox">
-        <a href="#"><span class = "inspan">31/08/2022:</span></a>
+        <a href="blog3.html"><span class = "inspan">31/08/2022:</span></a>
         <h4>Logo + Mascot competition!</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptatem natus nam temporibus neque at.</p>
       </div>
 
       <div class = "newsbox">
-        <a href="#"><span class = "inspan">11/07/2022:</span></a>
+        <a href="blog2.html"><span class = "inspan">11/07/2022:</span></a>
         <h4>STUDYspace Browser Extension first look.</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptatem natus nam temporibus neque at.</p>
       </div>
 
       <div class = "newsbox">
-        <a href="#"><span class = "inspan">18/05/2022:</span></a>
+        <a href="blog1.html"><span class = "inspan">18/05/2022:</span></a>
         <h4>Welcome to our blog!</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta voluptatem natus nam temporibus neque at.</p>
       </div>
