Removed '<center>' from the footer and did it in CSS instead + fixed CSS

--- a/STUDYspace website/help.html
+++ b/STUDYspace website/help.html
@@ -40,7 +40,7 @@
       </div>
       <div class = "full">
         <label for="message"><i class="fam fa-solid fa-message"></i> Message</label>
-        <textarea name="" id="message"></textarea>
+        <textarea id="message"></textarea>
       </div>
 
       <div class = "action">
@@ -50,10 +50,6 @@
 
     </form>
   </section>
-
-
-
-
 
   <footer>
     <div class = "main-content">
@@ -106,9 +102,7 @@
       </div>
     </div>
     <div class = "bottom">
-      <center>
         <span class = "credit"><span class ="inspan">STUDY</span>space inc. | &copy; 2022 All rights reserved</span>
-      </center>
     </div>
   </footer>
 
