Started adding Media Queries, added a home link in nav, and page status.

--- a/STUDYspace website/index.html
+++ b/STUDYspace website/index.html
@@ -16,6 +16,7 @@
     <nav>
       <a href="index.html"><span class = "inspan"><h2>STUDY</h2></span><h2>space</h2></a>
       <ul>
+        <li><a href="index.html" class = "select"><i class="fa-solid fa-house"></i> Home</a></li>
         <li><a href="about.html"><i class="fas fa-solid fa-circle-info"></i>About</a></li>
         <li><a href="news.html"><i class="fas fa-solid fa-newspaper"></i>News</a></li>
         <li><a href="download.html"><i class="fas fa-solid fa-download"></i>Download</a></li>
