--- a/STUDYspace website/help.html
+++ b/STUDYspace website/help.html
@@ -16,11 +16,12 @@
     <nav>
       <a href="index.html"><span class = "inspan"><h2>STUDY</h2></span><h2>space</h2></a>
       <ul>
+        <li><a href="index.html"><i class="fa-solid fa-house"></i> Home</a></li>
         <li><a href="about.html"><i class="fas fa-solid fa-circle-info"></i>About</a></li>
         <li><a href="news.html"><i class="fas fa-solid fa-newspaper"></i>News</a></li>
         <li><a href="download.html"><i class="fas fa-solid fa-download"></i>Download</a></li>
         <li><a href="faq.html"><i class="fas fa-solid fa-circle-question"></i>FAQ</a></li>
-        <li><a href="help.html"><i class="fas fa-solid fa-address-card"></i>Contact</a></li>
+        <li><a href="help.html" class = "select"><i class="fas fa-solid fa-address-card"></i>Contact</a></li>
       </ul>
     </nav>
   </header>
