Added hamburger menu.

--- a/STUDYspace website/blog1.html
+++ b/STUDYspace website/blog1.html
@@ -12,10 +12,18 @@
   <title>18/05/2022 Blog post</title>
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="index.html"><span class = "inspan"><h2>STUDY</h2></span><h2>space</h2></a>
-      <ul>
+  <header class = "header">
+    <div class = "logo">
+      <a href="index.html"><span class = "inspan">STUDY</span>space</a>
+    </div>
+
+    <div class = "navigation">
+
+      <input type="checkbox" class = "toggle-menu">
+      <div class = "hamburger"></div>
+
+
+      <ul class = "menu">
         <li><a href="index.html"><i class="fa-solid fa-house"></i> Home</a></li>
         <li><a href="about.html"><i class="fas fa-solid fa-circle-info"></i>About</a></li>
         <li><a href="news.html" class = "select"><i class="fas fa-solid fa-newspaper"></i>News</a></li>
@@ -23,7 +31,8 @@
         <li><a href="faq.html"><i class="fas fa-solid fa-circle-question"></i>FAQ</a></li>
         <li><a href="help.html"><i class="fas fa-solid fa-address-card"></i>Contact</a></li>
       </ul>
-    </nav>
+    </div>
+
   </header>
 
 
